# selene_portal

./: .gitignore  base_test.py  main.py  pyproject.toml
helpers/: file_uploader.py  path_helper.py  string_helper.py
tests/: test_authorization.py  test_business_card.py  test_history.py  test_profile_edit.py  test_search_main.py  test_statements.py
