[tool.poetry]
name = "selene_portal"
version = "0.1.0"
description = ""
authors = ["Alexandra <ralex2709@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
selene = ">=2.0.0a39"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
